--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,21 @@
         android:theme="@style/Theme.WhattsApp"
         tools:targetApi="31">
         <activity
-            android:name=".ChatDetailActivity"
-            android:exported="false"/>
-        <activity
-            android:name=".SignInActivity"
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ChatDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SignInActivity"
+            android:exported="false">
         </activity>
         <activity
             android:name=".SignUpActivity"
